--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,41 @@
-.DS_Store
-.dart_tool/
-
-.packages
-.pub/
-pubspec.lock
-.idea/
-build/
-# Compiled class file
+# Miscellaneous
 *.class
-
-# Log file
 *.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.build/
+.buildlog/
+.history
+.svn/
+.swiftpm/
+migrate_working_dir/
 
-# BlueJ files
-*.ctxt
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# The .vscode folder contains launch configuration and tasks you configure in
+# VS Code which you may wish to be included in version control, so this line
+# is commented out by default.
+#.vscode/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Flutter/Dart/Pub related
+# Libraries should not include pubspec.lock, per https://dart.dev/guides/libraries/private-files#pubspeclock.
+/pubspec.lock
+**/doc/api/
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+build/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 example/.flutter-plugins-dependencies
+
+# Development Scripts
+scripts/
