--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,47 +1,53 @@
-group 'appmire.be.flutterjailbreakdetection'
-version '1.0-SNAPSHOT'
+group = "appmire.be.flutter_jailbreak_detection"
+version = "1.0-SNAPSHOT"
 
 buildscript {
-    ext.kotlin_version = '2.0.0'
+    ext.kotlin_version = '2.0.10'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("com.android.tools.build:gradle:8.7.0")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
     }
 }
 
-rootProject.allprojects {
+allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
     }
 }
 
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+apply plugin: "com.android.library"
+apply plugin: "kotlin-android"
 
 android {
-    compileSdk 34
-    namespace project.group
+    namespace = "appmire.be.flutter_jailbreak_detection"
+
+    compileSdk = 35
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_11
     }
 
     sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
+        main.java.srcDirs += "src/main/kotlin"
+        test.java.srcDirs += "src/test/kotlin"
     }
-    defaultConfig {
-        minSdk 17
-    }
-}
 
-dependencies {
-    implementation 'com.github.scottyab:rootbeer:0.1.0'
+    defaultConfig {
+        minSdk = 21
+    }
+
+    dependencies {
+        implementation("com.scottyab:rootbeer-lib:0.1.1")
+    }
 }
