--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,25 +1,22 @@
 name: flutter_jailbreak_detection_example
-description: Demonstrates how to use the flutter_jailbreak_detection plugin.
-author: Jeroen Trappers <jeroen@appmire.be>
+description: "Demonstrates how to use the flutter_jailbreak_detection plugin."
 homepage: https://github.com/jeroentrappers/flutter_jailbreak_detection
 
-version: 1.0.0+1
+publish_to: 'none'
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ^3.7.2
 
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   flutter_jailbreak_detection:
     path: ../
+
+dev_dependencies:
+  flutter_lints: ^5.0.0
+  flutter_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
